@@ -1343,6 +1343,17 @@ MAXCLANMEMBERS=20
 # Default is 1260
 DAYSCLANDEATH=1260
 
+# DAYSCLANOVERTHROW is an auto-maintenance feature.  
+# If the only clan members with the highest rank are declared
+# missing because they have not logged in in DAYSCLANOVERTHROW days, the 
+# current position holders will be replaced with the next highest ranking
+# player who is eligible and has logged in recently.  Set this to 0 to
+# disable this feature.
+#
+# *** Note - this is in IN-GAME time, where 24 days equals 1 RL day
+# Default is 952
+DAYSCLANOVERTHROW=952
+
 # CLANVOTE is part of the clan voting feature.  It determines
 # the number of mud days that a vote is allowed to exist before
 # being closed.  The vote will remain active for this given amount
