@@ -210,7 +210,7 @@ public class CMProps extends Properties
 		DAYSCLANDEATH,
 		MINCLANLEVEL,
 		MANACOST,
-		//DBPINGINTMINS,
+		DAYSCLANOVERTHROW,
 		//LANGTRAINCOST,
 		//SKILLTRAINCOST,
 		//COMMONPRACCOST,
@@ -2172,6 +2172,7 @@ public class CMProps extends Properties
 		setIntVar(Int.MAXCLANMEMBERS,getStr("MAXCLANMEMBERS"));
 		setIntVar(Int.CLANCOST,getStr("CLANCOST"));
 		setIntVar(Int.DAYSCLANDEATH,getStr("DAYSCLANDEATH"));
+		setIntVar(Int.DAYSCLANOVERTHROW,getStr("DAYSCLANOVERTHROW","952"));
 		setIntVar(Int.MINCLANLEVEL,getStr("MINCLANLEVEL"));
 		setIntVar(Int.LASTPLAYERLEVEL,getStr("LASTPLAYERLEVEL"));
 		setIntVar(Int.JOURNALLIMIT,getStr("JOURNALLIMIT"));
