@@ -381,7 +381,7 @@
     <REQUIREDMASK></REQUIREDMASK>
     <ENTRYSCRIPT></ENTRYSCRIPT>
     <EXITSCRIPT></EXITSCRIPT>
-    <AUTOPROMOTEBY>NONE</AUTOPROMOTEBY>
+    <AUTOPROMOTEBY>RANK</AUTOPROMOTEBY>
     <PUBLIC>true</PUBLIC>
     <FAMILYONLY>false</FAMILYONLY>
     <RIVALROUS>true</RIVALROUS>
@@ -526,7 +526,7 @@
     <REQUIREDMASK></REQUIREDMASK>
     <ENTRYSCRIPT></ENTRYSCRIPT>
     <EXITSCRIPT></EXITSCRIPT>
-    <AUTOPROMOTEBY>NONE</AUTOPROMOTEBY>
+    <AUTOPROMOTEBY>RANK</AUTOPROMOTEBY>
     <PUBLIC>true</PUBLIC>
     <FAMILYONLY>false</FAMILYONLY>
     <RIVALROUS>true</RIVALROUS>
