@@ -851,6 +851,12 @@
 		<BR>
 		<FONT COLOR=WHITE>@INIValue?MASK=DAYSCLANDEATH&INIHELP@
 		</TD></TR>
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>DAYSCLANOVERTHROW</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=DAYSCLANOVERTHROW SIZE=20 VALUE="@INIValue?MASK=DAYSCLANOVERTHROW&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=DAYSCLANOVERTHROW&INIHELP@
+		</TD></TR>
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>CLANCOST</FONT>
 		</TD><TD WIDTH=780% VALIGN=TOP>
 		<INPUT TYPE=TEXT NAME=CLANCOST SIZE=20 VALUE="@INIValue?MASK=CLANCOST&VALUE@">
