@@ -47,6 +47,7 @@
   46. Internal: Web Server upgraded to rev 2.4 (SSL fixes and Protocol switching)
   47. Mundane STAT command now supports HEALTH, RESISTS, ATTRIBUTES
   48. New Spell: Lighthouse   
+  49. DAYSCLANOVERTHROW separated from DAYSCLANDEATH -- see INI file.
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
